@@ -15,6 +15,8 @@
  */
 package ch.ethz.sis.afs.dto.operation;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -41,7 +43,7 @@ public class WriteOperation implements Operation {
 
     public WriteOperation(UUID owner, String source, String tempSource, long offset, byte[] data, byte[] md5Hash) {
         this.owner = owner;
-        this.locks = List.of(new Lock<>(owner, source, LockType.Exclusive));
+        this.locks = new ArrayList<>(Collections.singletonList(new Lock<>(owner, source, LockType.Exclusive)));
         this.source = source;
         this.tempSource = tempSource;
         this.offset = offset;
